# qt-synthesizer

./: CHANGELOG  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
